deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maildev
  namespace: cp4i-mail
  labels:
    app: maildev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maildev
  template:
    metadata:
      labels:
        app: maildev
    spec:
      containers:
      - name: maildev
        # Todo: Use stable
        image: maildev/maildev:2.0.0-beta3
        args: ["-s", "1025", "-w", "1080"]
