service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailserver
  namespace: cp4i-mail
spec:
  selector:
    app: maildev
  ports:
    - name: smtp
      protocol: TCP
      port: 1025
      targetPort: 1025
    - name: http
      protocol: TCP
      port: 1080
      targetPort: 1080
