dashboard-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: mail-dashboard
  namespace: cp4i-mail
spec:
  to:
    kind: Service
    name: mailserver
    weight: 100
  port:
    targetPort: http
